re PR target/19102 (-march=pentium3 breaks linux kernel compiles w/ gcc-3_4-branch as of 2004/12/20)

PR target/19102
        * config/i386/i386.c (x86_inter_unit_moves): Disable.
        (ix86_hard_regno_mode_ok): Disallow SSE2 and MMX scalar modes
        in SSE registers when only SSE1 enabled.

From-SVN: r92526